add dotenv module

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "coffee-script": "1.x",
     "css-pipeline": "0.3.x",
+    "dotenv": "^6.1.0",
     "jade": "1.x",
     "js-pipeline": "0.2.x",
     "jstransformer-marked": "1.x",
